# pl_crossvalidate

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  example.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/: dependabot.yaml
.github/workflows/: lint.yaml  release.yaml  tests.yaml
lightning_logs/fold_0/: hparams.yaml  metrics.csv
lightning_logs/fold_1/: metrics.csv
pl_cross/: __init__.py  datamodule.py  ensemble.py  loggers.py  loop.py  trainer.py
pl_crossvalidate/: __init__.py  datamodule.py  ensemble.py  trainer.py
src/pl_cross/: __init__.py  datamodule.py  loop.py  trainer.py
tests/: __init__.py  boring_model.py  helper.py  requirements_tests.txt  test_datamodule.py  test_ensemble.py  test_trainer.py
tests/ensemble_weights/: model_fold0.pt  model_fold1.pt  model_fold2.pt  model_fold3.pt  model_fold4.pt
