[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pl_cross"
version = "0.1.0"
description = "Cross validation made easy in Lightning"
license = {file = "LICENSE"}
authors = [
    {name = "Nicki Skafte Detlefsen", email = "skaftenicki@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = ["pytest", "coverage", "ruff", "isort", "black", "mypy", "pre-commit"]

[tool.setuptools]
packages = ["pl_cross"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.coverage.run]
command_line = "-m pytest tests/"
omit = ["tests/*"]

[tool.ruff]
select = ["E", "F", "B", "I", "N"]
line-length = 120

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
