[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pl_cross"
version = "0.0.2"
description = "Cross validation made easy in Lightning"
license = {file = "LICENSE"}
authors = [
    {name = "Nicki Skafte Detlefsen", email = "skaftenicki@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["pl_cross"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.coverage.run]
command_line = "-m pytest tests/"
omit = ["tests/*"]

[tool.ruff]
select = ["E", "W", "F", "B", "I", "N", "W", "S", "D"]
ignore = ["D100", "D104", "D107"]
line-length = 120

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"tests/**" = ["S101"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.semantic_release]
version_toml = "pyproject.toml:project.version"
branch = "master"
dist_path = "dist/"
remove_dist = false
upload_to_release = true
upload_to_pypi = false
patch_without_tag = true
