[metadata]
name = pl_cross
version = 0.1.0
description = Cross validation in pytorch lightning made easy
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/SkafteNicki/pl_cross
download_url = https://github.com/SkafteNicki/pl_cross/releases
project_urls =
    Bug Tracker = https://github.com/SkafteNicki/pl_cross/issues
    Source Code = https://github.com/SkafteNicki/pl_cross

# Author information
author = Nicki Skafte Detlefsen
author_email = skaftenicki@gmail.com
maintainer = Nicki Skafte Detlefsen
maintainer_email = skaftenicki@gmail.com

# License Information
license = Apache-2.0
license_file = LICENSE


classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Artificial Intelligence
    # TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
keywords =


# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options]
install_requires =
    pytorch-lightning>=1.5
    scikit-learn>=1.0

[options.packages.find]
where = src

[flake8]
# TODO: this should be 88 or 100 according PEP8
max-line-length = 110
exclude = .tox,*.egg,build,temp,docs,setup.py
exclude-from-doctest = .
select = E,W,F
doctests = True
verbose = 2
# https://pep8.readthedocs.io/en/latest/intro.html#error-codes
format = pylint
ignore = E731,W504,F401,F841,E722,W503,E203

[coverage:run]
omit =
    tests/*